--- a/index.html
+++ b/index.html
@@ -1,31 +1,14 @@
-<!DOCTYPE HTML> 
-<html lang="en"> 
-
-    <head> 
-        <meta charset="UTF-8" />
-        <title>Enemy Follow</title>
-
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-
-    <body>
-        <script src="js/phaser.min.js"></script>
-
-        <script src="js/scene/init/initGlobalVariables.js"></script>
-
-        <script src="js/scene/preload/preloadImages.js"></script>
-
-        <script src="js/scene/create/createBackgroundImage.js"></script>
-        <script src="js/scene/create/createCamera.js"></script>
-        <script src="js/scene/create/createEnemy.js"></script>
-        <script src="js/scene/create/createPlayer.js"></script>
-
-        <script src="js/scene/update/updateEnemyMovement.js"></script>
-        <script src="js/scene/update/updateEnemyRotation.js"></script>
-        <script src="js/scene/update/updatePlayerMovement.js"></script>
-        <script src="js/scene/update/updatePlayerRotation.js"></script>
-
-        <script src="js/scene/scene_name_here.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Miner</title>
+</head>
+<body>
     
+    <script src="js/phaser.min.js"></script>
+    <script src="js/game.js"></script>
+</body>
 </html>
