--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     
-    <script src="js/lib/phaser.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <script src="js/startscreen.js"></script>
     <script src="js/game.js"></script>
     <script src="js/index.js"></script>
