--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@
     
     <!---Create--->
     <script src="js/create/createKeys.js"></script>
+    <script src="js/create/createText.js"></script>
+    <script src="js/update/displayStats.js"></script>
     
     <!--Create Objects-->
     <script src="js/create/createObjects/createBackground.js"></script>
     <script src="js/create/createObjects/createShip.js"></script>
-    <script src="js/create/createObjects/createShopButton.js"></script>
+    <script src="js/create/createObjects/createFactoryButton.js"></script>
     <script src="js/create/createObjects/createTerra.js"></script>
+
+    <!--Create Conversions-->
+    <script src="js/create/Convert/convertWatertoFuel.js"></script>
+    <script src="js/create/Convert/convertHydrogenToFuel.js"></script>
 
     <!---Update--->
     <script src="js/update/shipMovement.js"></script>
+    <script src="js/update/factory.js"></script>
+    <script src="js/update/textUpdate.js"></script>
 </body>
 </html>
