Added In-Game Menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!---Create--->
     <script src="js/create/createKeys.js"></script>
     <script src="js/create/createText.js"></script>
-    <script src="js/update/displayStats.js"></script>
+    <script src="js/create/menu.js"></script>
     
     <!--Create Objects-->
     <script src="js/create/createObjects/createBackground.js"></script>
@@ -39,7 +39,6 @@
 
     <!---Update--->
     <script src="js/update/shipMovement.js"></script>
-    <script src="js/update/factory.js"></script>
     <script src="js/update/textUpdate.js"></script>
 </body>
 </html>
