--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/Terra.png">
     <title>Miner</title>
     <style>
         body {
-  background-color: #000000;
-  margin: 0px;
-}
+        background-color: #000000;
+        margin: 0px;
+        }
     </style>
 </head>
 <body>
     
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+    <script src="js/lib/phaser.min.js"></script>
     <script src="js/startscreen.js"></script>
     <script src="js/game.js"></script>
     <script src="js/index.js"></script>
@@ -25,7 +26,9 @@
     <!---Create--->
     <script src="js/create/createKeys.js"></script>
     <script src="js/create/createText.js"></script>
-    <script src="js/create/menu.js"></script>
+    <script src="js/create/createPauseMenu.js"></script>
+    <script src="js/create/createWorld.js"></script>
+    <script src="js/create/createVariables.js"></script>
     
     <!--Create Objects-->
     <script src="js/create/createObjects/createBackground.js"></script>
@@ -34,8 +37,8 @@
     <script src="js/create/createObjects/createTerra.js"></script>
 
     <!--Create Conversions-->
-    <script src="js/create/Convert/convertWatertoFuel.js"></script>
-    <script src="js/create/Convert/convertHydrogenToFuel.js"></script>
+    <script src="js/create/convert/convertWatertoFuel.js"></script>
+    <script src="js/create/convert/convertHydrogenToFuel.js"></script>
 
     <!---Update--->
     <script src="js/update/shipMovement.js"></script>
