--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Phaser 3 TypeScript Starter</title>
+    <title>Miner Game</title>
     <meta charset="utf-8" />
     <style>
       body {
         margin: 0;
       }
     </style>
+    <link rel="icon" type="image/x-icon" href="public/assets/Terra.png">
     <script type="module" src="/src/index.ts"></script>
   </head>
   <body>
