--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         margin: 0;
       }
     </style>
-    <link rel="icon" type="image/x-icon" href="public/assets/Terra.png">
+    <link rel="icon" type="image/x-icon" href="/assets/Terra.png">
     <script type="module" src="/src/index.ts"></script>
   </head>
   <body>
