--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>Miner Game</title>
     <meta charset="utf-8" />
+    <meta name="keywords" content="JavaScript, TypeScript, Vercel, GitHub, Phaser, Idle Clicker">
+    <meta name="description" content="Miner is a 2D Idle Game where your goal is to mine planets' resources and sell them to a market in order to make more money and grow your economic space empire!">
+    <meta name="author" content="https://github.com/ChpssCode">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {
         margin: 0;
